<resources>
    <string name="app_name">MercadoLibreTest</string>
    <string name="name">Nombre:</string>
    <string name="price">Precio:</string>
    <string name="available_quantity">Disponible:</string>
    <string name="ERROR_RESPONSE_MESSAGE">Error response</string>
    <string name="CONNECTION_ERROR_MESSAGE">Connection Error</string>
    <string name="ERROR_DATA_MESSAGE">Error data.</string>
    <string name="SUCCESS_MESSAGE">Consulta exitosa.</string>
    <string name="DATA_ERROR_MESSAGE">No se logro obtener informacion del producto consultado, favor intente de nuevo...</string>
    <string name="empty_text_message">Ingrese nombre del producto a consultar</string>
    <string name="seller">Vendedor</string>
    <string name="sales">Ventas</string>
    <string name="available_qty">Cantidad Disponible</string>
    <string name="sold_qty">Cantidad Vendida</string>
    <string name="seller_profile">Perfil</string>
    <string name="rating">Calificaciones</string>
    <string name="rating_positive">Positivo</string>
    <string name="rating_negative">Negativo</string>
    <string name="rating_neutral">Neutral</string>
    <string name="attributes">Caracteristicas</string>
</resources>